reduced profile image size

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <![endif]-->
 
         <!--Profile Picture-->
-        <img src="assets/profile.png" alt="profile picture" class="profile-picture">
+        <img src="assets/nm_profile.jpg" alt="profile picture" class="profile-picture">
 
         <!--Profile Name-->
         <div class="profile-name">@nicholasmallis</div>
